Mejorado por Jorge index.html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Hola mundo - Jia Xi Shan</h1>
         <h2>Nueva línea de código</h2>
+        <h3>Mejorado por Jorge</h3>
     </body>
 </html>
